# knead-net-gui

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  RENDER_SPEC.md  build.rs  package.json  pnpm-lock.yaml  svelte.config.ts  vite.config.ts
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
docs/: PACKAGING.md  RELEASING.md  layout-audit.md  layout-performance.md  layout-repair-plan.md
docs/adr/: power-rail-connectivity.md
examples/: README.md  led_bjt.json
examples/NE555+CD4017/: NE555+CD4017.kicad_pcb  NE555+CD4017.kicad_pro  NE555+CD4017.kicad_sch
examples/SNx4HC00/: SNx4HC00.kicad_sch
examples/folders/NE555+CD4017/: NE555+CD4017.kicad_prl
examples/folders/SNx4HC00/: SNx4HC00.kicad_prl  SNx4HC00.kicad_pro
examples/folders/h-bridge/: h-bridge.kicad_prl  h-bridge.kicad_pro
examples/folders/h-bridge_different_order/: h-bridge.kicad_sch
examples/folders/lm741/: lm741.kicad_pcb  lm741.kicad_prl  lm741.kicad_sch
examples/h-bridge/: h-bridge.kicad_pcb
examples/h-bridge_different_order/: h-bridge.kicad_pcb  h-bridge.kicad_pro
examples/inputs/: SNx4HC00.kicad_pcb  SNx4HC00.net  h-bridge.net  large_net.kicad_pcb  led_bjt.json  random.net
examples/kicad/: bjt_led.net  h-bridge-power.net  h-bridge-short.net  h-bridge.net  led_bjt.net
examples/lm741/: lm741.kicad_pro
packaging/aur/: .SRCINFO  PKGBUILD  README.md  knead-net-gui.desktop
packaging/linux/: io.github.dfdc1123.kneadnet.metainfo.xml  kneadnet.desktop
scripts/: check-version.mjs  collect-release-assets.mjs  package-examples.mjs  repack-appimage.mjs  verify-release-assets.mjs
src/: app.css  app.html  circuit.rs  lib.rs  main.rs  render.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: compute.rs  lib.rs  main.rs  sch.rs
src-tauri/tests/: sch_smoke.rs
src/input/: footprint.rs  json.rs  mod.rs  netlist.rs  pcb.rs  sexp.rs
src/layout/: breadboard.rs  connectivity.rs  cost.rs  debug.rs  layout_impl.rs  mod.rs  occupancy.rs  placement.rs  prepare.rs  preprocess.rs  problem.rs  progress.rs  routing.rs  sa.rs  tests.rs
src/layout/cost/: bridge.rs  context.rs  cost_fast.rs  force.rs  legalize.rs  mod.rs  mst.rs  profile.rs  spectral.rs  state.rs  tests.rs
src/lib/: boardHalfSelection.js  breadboardGeometry.js  i18n.ts  keyboardShortcuts.js  layout.ts  projectDrop.js  seedPreview.js  wheelGestures.js
src/lib/actions/: centerCanvas.ts
src/lib/components/: BreadboardPreview.svelte  Dock.svelte  Panel.svelte  SchematicNetPicker.svelte  Step1SelectFiles.svelte  Step2SelectBoard.svelte  Step3Compute.svelte  Step4Result.svelte  ZoomControls.svelte
src/routes/: +layout.svelte  +page.svelte
tests/: aura-guidance.test.mjs  board-half-selection.test.mjs  breadboard-preview.test.mjs  keyboard-shortcuts.test.mjs  layout_quality.rs  layout_real_pcb.rs  linux-pinch-zoom.test.mjs  project-drop.test.mjs  repack-appimage.test.mjs  schematic-net-picker.test.mjs  step3-seed-preview.test.mjs  step4-visuals.test.mjs  vite-tailwind.test.mjs  wheel-gestures.test.mjs  windows-pinch-zoom.test.mjs
