[workspace]
members = ["src-tauri"]
resolver = "2"

[package]
name = "knead-net"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
fastrand = "2.4.1"
lexpr = "0.2"
rayon = "1.12.0"

# layout 模块里 cost.rs / sa.rs 用了 cfg(profile_sa) / cfg(profile_cost)
# 之前写在 build.rs 里, 现在挪到 [lints] 里 —— 效果一样, 不再需要 build.rs。
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(profile_sa)", "cfg(profile_cost)"] }
