[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.2.3"
authors = ["dfdc1123"]
license = "GPL-3.0-only"
homepage = "https://github.com/dfdc1123/knead-net-gui"
repository = "https://github.com/dfdc1123/knead-net-gui"

[package]
name = "knead-net"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Rust library for converting electronic schematics into breadboard layouts and routing suggestions"
edition = "2024"

[dependencies]
fastrand = "2.4.1"
lexpr = "0.2"
rayon = "1.12.0"

# layout 模块里 cost.rs / sa.rs 用了 cfg(profile_sa) / cfg(profile_cost)
# 之前写在 build.rs 里, 现在挪到 [lints] 里 —— 效果一样, 不再需要 build.rs。
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(profile_sa)", "cfg(profile_cost)"] }
