[package]
name = "knead-net-gui"
version = "0.1.0"
description = "Tauri frontend for knead-net"
authors = ["you"]
edition = "2021"

# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
[lib]
name = "knead_net_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 引用根目录的 knead-net crate (Cargo workspace 兄弟 member)
knead-net = { path = ".." }