[package]
name = "kneadnet"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Convert electronic schematics into breadboard layouts and routing suggestions"
edition = "2021"

# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
[lib]
name = "kneadnet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lexpr = "0.2"

# 引用根目录的 knead-net crate (Cargo workspace 兄弟 member)
knead-net = { path = ".." }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18.2", features = ["v3_24"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows-core = "0.61.2"
